--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.4.3
-  http: ^0.12.0
+  # http: ^0.12.0
 
 dev_dependencies:
   flutter_test:
