--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,15 @@ dependencies:
   http: ^0.12.0
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.7.0"
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  adaptive_icon_background: #ffffff
+  android: "launcher_icon"
+  ios: true
+  image_path: "res/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
