--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ flutter:
         - asset: res/fonts/Cera-Pro-Bold-Italic.otf
           weight: 700
           style: italic
+    - family:  SocialIcons
+      fonts:
+        - asset: res/fonts/SocialIcons.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
