--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,6 @@
 name: vapp
 description: The event app
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# Read more about versioning at semver.org.
 version: 1.0.0+1
 
 environment:
@@ -18,10 +12,8 @@ dependencies:
   flutter_localizations:
       sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  shared_preferences: ^0.4.3
+  shared_preferences: ^0.5.1+1
   http: ^0.12.0
 
 dev_dependencies:
@@ -34,9 +26,6 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "res/icon/icon.png"
-
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
@@ -72,11 +61,3 @@ flutter:
     - family:  SocialIcons
       fonts:
         - asset: res/fonts/SocialIcons.ttf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.io/custom-fonts/#from-packages
