--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
       sdk: flutter
-
+  google_sign_in: ^4.0.1+1
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.1+1
   http: ^0.12.0
+
 
 dev_dependencies:
   flutter_launcher_icons: "^0.7.0"
