facebook login in it's way

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,11 @@ environment:
 
 dependencies:
   google_sign_in: ^4.0.1
+  flutter_facebook_login: ^2.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
       sdk: flutter
-
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.1+1
   http: ^0.12.0
