--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter_icons:
-  adaptive_icon_background: #ffffff
+  adaptive_icon_background: #ffffffff
   android: "launcher_icon"
   ios: true
   image_path: "res/icon/icon.png"
